--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+<!--    DuksungGoodsPlatform Color -->
+    <color name="black">#FF000000</color>
+    <color name="white">#FFFFFFFF</color>
+    <color name="burgundy">#FFB70050</color> <!--덕성 공식 버건디색으로 일단 넣음-->
+    <color name="gray">#FF808080</color> <!--임의지정-->
+
+<!--    System -->
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-
-<!--    DuksungGoodsPlatform Color-->
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
-    <color name="burgundy">#B70050</color> <!--덕성 공식 버건디색으로 일단 넣음-->
-    <color name="gray">#808080</color> <!--임의지정-->
 </resources>
