--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="burgundy">#FFB70050</color> <!--덕성 공식 버건디색으로 일단 넣음-->
+    <color name="dark_gray">#707070</color> <!--임의지정 by jeehea-->
     <color name="gray">#BFBFBF</color> <!--임의지정 by sewon-->
     <color name="light_gray">#D9D9D9</color> <!--임의지정 by sewon-->
 
