--- a/app/src/main/res/layout/activity_actual_demand_posting.xml
+++ b/app/src/main/res/layout/activity_actual_demand_posting.xml
@@ -13,7 +13,7 @@
         android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />
+        android:src="@drawable/ic_baseline_arrow_back_24" />
 
     <TextView
         android:id="@+id/textView6"
