--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -8,10 +8,10 @@
 
     <ImageView
         android:id="@+id/ivSignUpBack"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_margin="20dp"
-        android:src="@drawable/ic_launcher_background"
+        android:src="@drawable/ic_baseline_arrow_back_24"
         app:layout_constraintBottom_toBottomOf="@+id/tvSignUpTitle"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/tvSignUpTitle" />
@@ -30,7 +30,7 @@
 
     <View
         android:id="@+id/vSignUp"
-        android:layout_width="300dp"
+        android:layout_width="284dp"
         android:layout_height="2dp"
         android:layout_marginTop="10dp"
         android:background="@color/burgundy"
@@ -40,49 +40,68 @@
 
     <EditText
         android:id="@+id/etSignUpName"
-        android:layout_width="300dp"
+        android:layout_width="272dp"
         android:layout_height="50dp"
         android:layout_marginTop="40dp"
         android:paddingHorizontal="10dp"
         android:gravity="center_vertical"
         android:background="@drawable/shape_gray_border"
         android:hint="Name"
+        android:textSize="17sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/vSignUp" />
+
     <EditText
-        android:id="@+id/etSignUpEmail"
-        android:layout_width="300dp"
+        android:id="@+id/etSignUpNickname"
+        android:layout_width="272dp"
         android:layout_height="50dp"
         android:layout_marginTop="40dp"
-        android:paddingHorizontal="10dp"
-        android:gravity="center_vertical"
         android:background="@drawable/shape_gray_border"
-        android:hint="Email"
+        android:gravity="center_vertical"
+        android:hint="Nickname"
+        android:paddingHorizontal="10dp"
+        android:textSize="17sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etSignUpName" />
+
+    <EditText
+        android:id="@+id/etSignUpEmail"
+        android:layout_width="272dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/shape_gray_border"
+        android:gravity="center_vertical"
+        android:hint="Email"
+        android:paddingHorizontal="10dp"
+        android:textSize="17sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etSignUpNickname" />
     <EditText
         android:id="@+id/etSignUpPassword"
-        android:layout_width="300dp"
+        android:layout_width="272dp"
         android:layout_height="50dp"
         android:layout_marginTop="40dp"
         android:paddingHorizontal="10dp"
         android:gravity="center_vertical"
         android:background="@drawable/shape_gray_border"
         android:hint="Password"
+        android:textSize="17sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etSignUpEmail" />
     <EditText
         android:id="@+id/etSignUpPasswordCheck"
-        android:layout_width="300dp"
+        android:layout_width="272dp"
         android:layout_height="50dp"
         android:layout_marginTop="40dp"
         android:paddingHorizontal="10dp"
         android:gravity="center_vertical"
         android:background="@drawable/shape_gray_border"
         android:hint="Password Check"
+        android:textSize="17sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etSignUpPassword" />
@@ -94,19 +113,19 @@
         android:layout_marginTop="20dp"
         android:buttonTint="@color/burgundy"
         android:text="약관동의"
-        android:textSize="15sp"
+        android:textSize="13sp"
         android:textColor="@color/dark_gray"
         app:layout_constraintStart_toStartOf="@+id/etSignUpPasswordCheck"
         app:layout_constraintTop_toBottomOf="@+id/etSignUpPasswordCheck" />
 
     <Button
         android:id="@+id/btnSignUp"
-        android:layout_width="350dp"
-        android:layout_height="50dp"
+        android:layout_width="310dp"
+        android:layout_height="40dp"
         android:layout_marginTop="50dp"
         android:background="@drawable/shape_btn_burgundy_round"
         android:text="회원가입"
-        android:textSize="20sp"
+        android:textSize="17sp"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
