--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,64 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingLeft="40dp"
+    android:paddingRight="40dp">
 
     <TextView
         android:id="@+id/tv_login_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="44dp"
         android:text="로그인"
         android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_gravity="center"/>
 
-    <!-- 덕새 추후 추가 예정 -->
+
     <ImageView
         android:id="@+id/iv_login_dukbird"
-        android:layout_width="250dp"
+        android:layout_width="match_parent"
         android:layout_height="250dp"
-        android:layout_marginStart="55dp"
-        android:layout_marginTop="55dp"
-        android:layout_marginEnd="56dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_gravity="center"
+        android:layout_marginTop="35dp"
         app:layout_constraintTop_toBottomOf="@+id/tv_login_title"
-        android:src="@drawable/ic_launcher_background" />
+        android:src="@drawable/dukbird"
+        />
 
     <EditText
         android:id="@+id/et_login_email"
-        android:layout_width="300dp"
+        android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:layout_gravity="center"
         android:layout_marginTop="20dp"
         android:background="@drawable/shape_gray_border"
+        android:drawableRight="@drawable/txt_email_foreground"
         android:gravity="center_vertical"
         android:hint="Email"
-        android:singleLine="true"
         android:lines="1"
-        android:paddingHorizontal="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iv_login_dukbird" />
+        android:singleLine="true"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="384dp"
-        android:layout_marginEnd="8dp"
-        android:text="@string/login_email"
-        android:textSize="16dp"
-        android:textColor="@color/black"
-        app:layout_constraintEnd_toEndOf="@+id/et_login_email"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/et_login_passwd"
-        android:layout_width="300dp"
+        android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
         android:paddingHorizontal="10dp"
@@ -73,6 +63,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_login_email" />
 
+    <Button
+        android:id="@+id/btn_login"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@drawable/shape_btn_burgundy_round"
+        android:layout_marginTop="25dp"
+        android:text="로그인하기"
+        android:textColor="@color/white"
+        android:textSize="16dp"/>
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -81,7 +81,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_login_passwd"
-        android:id="@+id/linear_login_1">
+        android:id="@+id/linear_login_1"
+        android:layout_gravity="center">
 
         <TextView
             android:id="@+id/tv_login_no_account"
@@ -101,16 +102,6 @@
             android:textColor="@color/burgundy" />
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linear_login_1"
-        android:id="@+id/linear_login_2">
-
         <TextView
             android:id="@+id/tv_login_forget_password"
             android:layout_width="wrap_content"
@@ -118,10 +109,10 @@
             android:layout_marginStart="10dp"
             android:text="비밀번호를 잊으셨나요?"
             android:textSize="13sp"
-            android:textColor="@color/burgundy" />
+            android:textColor="@color/burgundy"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"/>
 
 
     </LinearLayout>
 
-
-</androidx.constraintlayout.widget.ConstraintLayout>
