--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -26,45 +26,12 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-<!--        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/vfHomeBanner"
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/vpHomeBanner"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/tvSignUpTitle" />-->
-
-        <ViewFlipper
-            android:id="@+id/vfHomeBanner"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/tvSignUpTitle" >
-            <ImageView
-                android:id="@+id/ivHomeBannerViewFlipper1"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="centerCrop"/>
-            <ImageView
-                android:id="@+id/ivHomeBannerViewFlipper2"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="centerCrop"/>
-            <ImageView
-                android:id="@+id/ivHomeBannerViewFlipper3"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="centerCrop"/>
-            <ImageView
-                android:id="@+id/ivHomeBannerViewFlipper4"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="centerCrop"/>
-            <ImageView
-                android:id="@+id/ivHomeBannerViewFlipper5"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="centerCrop"/>
-        </ViewFlipper>
+            app:layout_constraintTop_toBottomOf="@+id/tvSignUpTitle"/>
 
         <TextView
             android:id="@+id/tvHomeSectionTitle1"
@@ -75,7 +42,7 @@
             android:textColor="@color/black"
             android:textSize="19sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/vfHomeBanner" />
+            app:layout_constraintTop_toBottomOf="@+id/vpHomeBanner" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvHomeSection1"
