--- a/app/src/main/res/layout/fragment_goods_ex.xml
+++ b/app/src/main/res/layout/fragment_goods_ex.xml
@@ -137,16 +137,32 @@
                     android:textColor="@color/black" />
 
             </LinearLayout>
-            <LinearLayout
+            <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_marginTop="20dp">
                 <TextView
-                    android:layout_width="200dp"
+                    android:layout_width="120dp"
                     android:layout_height="50dp"
                     android:text="관심목록"
-                    
-            </LinearLayout>
+                    android:textColor="@color/white"
+                    android:background="@color/gray"
+                    android:gravity="center"
+                    android:textSize="15sp"
+                    android:layout_marginLeft="60dp"
+                    />
+                <TextView
+                    android:layout_width="120dp"
+                    android:layout_height="50dp"
+                    android:text="가수요조사 폼"
+                    android:textColor="@color/white"
+                    android:background="@color/burgundy"
+                    android:gravity="center"
+                    android:layout_gravity="right"
+                    android:textSize="15sp"
+                    android:layout_marginRight="60dp"
+                    />
+            </FrameLayout>
         </LinearLayout>
     </ScrollView>
 
