--- a/app/src/main/res/layout/fragment_goods_ex.xml
+++ b/app/src/main/res/layout/fragment_goods_ex.xml
@@ -146,7 +146,7 @@
                     android:layout_height="50dp"
                     android:text="관심목록"
                     android:textColor="@color/white"
-                    android:background="@color/gray"
+                    android:background="@color/dark_gray"
                     android:gravity="center"
                     android:textSize="15sp"
                     android:layout_marginLeft="60dp"
