--- a/app/src/main/res/layout/fragment_goods_ex.xml
+++ b/app/src/main/res/layout/fragment_goods_ex.xml
@@ -13,6 +13,7 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
             <ImageView
+                android:id="@+id/ivGoodsExMainImage"
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
                 android:src="@drawable/ic_launcher_background"
@@ -21,6 +22,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="40dp">
                 <TextView
+                    android:id="@+id/tvGoodsExCategory"
                     android:layout_width="50dp"
                     android:layout_height="20dp"
                     android:text="기타"
@@ -30,6 +32,7 @@
                     android:layout_marginLeft="20dp"/>
                 <!--추후 이미지 소스 생기면 추가-->
                 <ImageView
+                    android:id="@+id/ivGoodsExFavorite"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:src="@drawable/star_nonclicked"
@@ -39,6 +42,7 @@
                     android:gravity="center"/>
             </FrameLayout>
             <TextView
+                android:id="@+id/tvGoodsExTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
@@ -47,6 +51,7 @@
                 android:textColor="@color/black"
                 android:textStyle="bold"/>
             <TextView
+                android:id="@+id/tvGoodsExPrice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
@@ -54,41 +59,12 @@
                 android:textColor="@color/black"
                 android:text="12,000원(가격)"/>
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="10dp"
-                android:layout_marginLeft="20dp">
-                <!-- 왼쪽이 -, 오른쪽이 + 인게 더 나은 것 같아서 위치 바꿈-->
-                <TextView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:text="-"
-                    android:background="@color/gray"
-                    android:textStyle="bold"
-                    android:textColor="@color/black"
-                    android:gravity="center"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"
-                    android:layout_height="20dp"
-                    android:text="1(수량)"/>
-                <TextView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:text="+"
-                    android:background="@color/gray"
-                    android:textStyle="bold"
-                    android:textColor="@color/black"
-                    android:gravity="center"/>
-            </LinearLayout>
-            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:orientation="horizontal"
                 android:layout_marginTop="15dp">
                 <TextView
+                    android:id="@+id/tvGoodsExTotalCount"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -99,6 +75,7 @@
                     android:layout_gravity="center_vertical"
                     android:layout_marginLeft="20dp"/>
                 <TextView
+                    android:id="@+id/tvGoodxExTime"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -115,6 +92,7 @@
                 android:layout_marginTop="10dp"
                 android:background="@color/light_gray">
                 <TextView
+                    android:id="@+id/tvGoodsExInfoStatus"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
@@ -123,12 +101,14 @@
                     android:textColor="@color/black"
                     android:layout_marginTop="10dp"/>
                 <TextView
+                    android:id="@+id/tvGoodsExInfoEndCount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
                     android:text="목표개수는 30개가 모여야만 결제됩니다."
                     android:textColor="@color/black" />
                 <TextView
+                    android:id="@+id/tvGoodsExInfoPayment"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
@@ -142,6 +122,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp">
                 <TextView
+                    android:id="@+id/tvGoodsExFavoriteList"
                     android:layout_width="120dp"
                     android:layout_height="50dp"
                     android:text="관심목록"
@@ -152,6 +133,7 @@
                     android:layout_marginLeft="60dp"
                     />
                 <TextView
+                    android:id="@+id/tvGoodsExForm"
                     android:layout_width="120dp"
                     android:layout_height="50dp"
                     android:text="가수요조사 폼"
