--- a/app/src/main/res/layout/activity_add_promotion.xml
+++ b/app/src/main/res/layout/activity_add_promotion.xml
@@ -19,7 +19,7 @@
             android:src="@drawable/ic_back"/>
 
         <TextView
-            android:id="@+id/promote_tile"
+            android:id="@+id/promote_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="23dp"
