회원가입 시 덕성 이메일만 가입 가능 안내문구와 덕성이메일인지 체크 기능 추가(개발 편의상 주석처리)

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -74,6 +74,17 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/etSignUpName" />
 
+        <TextView
+            android:id="@+id/tvSignUpEmailNotice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:text="* 덕성 이메일로만 가입이 가능합니다."
+            android:textColor="@color/burgundy"
+            android:textSize="15sp"
+            app:layout_constraintBottom_toTopOf="@+id/etSignUpEmail"
+            app:layout_constraintStart_toStartOf="@+id/etSignUpEmail" />
+
         <EditText
             android:id="@+id/etSignUpEmail"
             android:layout_width="272dp"
