포스팅 xml 수정

--- a/app/src/main/res/layout/activity_actual_demand_posting.xml
+++ b/app/src/main/res/layout/activity_actual_demand_posting.xml
@@ -107,6 +107,8 @@
                 android:layout_marginTop="15dp"
                 android:layout_marginStart="24dp"
                 android:layout_marginEnd="24dp"
+                android:padding="5dp"
+                android:paddingStart="10dp"
                 android:ems="10"
                 android:inputType="textPersonName"
                 android:background="@drawable/border_black" />
@@ -128,6 +130,8 @@
                 android:layout_marginTop="15dp"
                 android:layout_marginStart="24dp"
                 android:layout_marginEnd="24dp"
+                android:padding="5dp"
+                android:paddingStart="10dp"
                 android:ems="10"
                 android:inputType="textPersonName"
                 android:background="@drawable/border_black" />
@@ -219,7 +223,8 @@
                 android:layout_marginStart="24dp"
                 android:layout_marginEnd="24dp"
                 android:hint="100개(최소수량)"
-                android:paddingStart="15dp"
+                android:padding="5dp"
+                android:paddingStart="10dp"
                 android:textSize="14sp"
                 android:ems="10"
                 android:inputType="textPersonName"
@@ -243,7 +248,8 @@
                 android:layout_marginStart="24dp"
                 android:layout_marginEnd="24dp"
                 android:hint="yyyy.mm.dd ~ yyyy.mm.dd"
-                android:paddingStart="15dp"
+                android:padding="5dp"
+                android:paddingStart="10dp"
                 android:textSize="14sp"
                 android:ems="10"
                 android:inputType="textPersonName"
@@ -267,7 +273,8 @@
                 android:layout_marginStart="24dp"
                 android:layout_marginEnd="24dp"
                 android:hint="최소금액 ~ 최대금액"
-                android:paddingStart="15dp"
+                android:padding="5dp"
+                android:paddingStart="10dp"
                 android:textSize="14sp"
                 android:ems="10"
                 android:inputType="textPersonName"
