실수요조사 폼 UI 수정 - hint 추가

--- a/app/src/main/res/layout/activity_actual_demand_form.xml
+++ b/app/src/main/res/layout/activity_actual_demand_form.xml
@@ -403,6 +403,8 @@
                     android:background="@drawable/border_black"
                     android:ems="10"
                     android:inputType="textPersonName"
+                    android:hint="덕성은행 123412341234"
+                    android:textSize="14sp"
                     android:padding="5dp"
                     android:paddingStart="10dp" />
 
